Everything in /pages but dealing with CSS overlap issue

--- a/pages/read/book.css
+++ b/pages/read/book.css
@@ -122,3 +122,8 @@ body, html {
   right: 10px;
 }
 
+/* To ignore CSS scope leakage */
+.home-icon-wrapper {
+  color: initial;
+  font-size: initial;
+}
